--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,29 @@ backend/.env
 # dependencies
 /node_modules
 /.pnp
+/frontend/node_modules/
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
