--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ yarn-error.log*
 *.njsproj
 *.sln
 frontend/node_modules/.cache/.eslintcache
+/frontend/node_modules
+frontend/node_modules/.cache/.eslintcache
