--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ yarn-error.log*
 frontend/node_modules/.cache/.eslintcache
 /frontend/node_modules
 frontend/node_modules/.cache/.eslintcache
+/frontend/node_modules
